add connection to Cloudinary and Dockerfile